# tech-challenge-2025

./: .dockerignore  README.md  docker-compose.yml
backend/: .sqlx  Cargo.toml  Dockerfile  Dockerfile.migrate  justfile
backend/migrations/: 20250410025500_create_account_table.up.sql  20250412134846_create_offset_table.up.sql  20250412153406_create_token_owner.up.sql
backend/src/: block.rs  cache.rs  current_block.rs  database.rs  error.rs  gas.rs  lib.rs  response.rs  state.rs
backend/src/account/: mod.rs  persistence.rs  route.rs
backend/src/token/: mod.rs  route.rs
frontend/: package-lock.json  package.json
frontend/app/welcome/: welcome.tsx
smart_contract/: README.md  hardhat.config.ts  package-lock.json  package.json
smart_contract/abi/: SimpleNFT.json
smart_contract/contracts/: SimpleNft.sol
smart_contract/ignition/modules/: SimpleNFT.ts
smart_contract/scripts/: deploy.ts  mint.ts  transfer.ts
smart_contract/test/: SimpleNFT.ts
