[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]

#web
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.42.0", features = ["full"] }

#tracing
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"

#serde
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10.8"
validator = { version = "0.20.0", features = ["derive"] }
web3 = "0.19.0"


sqlx = { version = "0.8.3", features = [
  "postgres",
  "runtime-tokio",
  "tls-native-tls",
] }
